# CHIP8-emulator

./: .gitmodules  CMakeLists.txt  README.md  chip8_emulator  makefile
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
src/: CHIP8.cpp  CHIP8.h  main.cpp  makefile
